clean up classpath doc - remove it to avoid confusion